--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  @import url('https://fonts.googleapis.com/css2?family=Borel&family=Open+Sans&family=Preahvihear&family=Rubik:wght@500&display=swap');
+
+
+/*[Global] */
+:root {
+  /* color */
+  --primary-color: #2b81e4;
+  --secondary-color: #eee;
+  --white-color: #fff;
+  --grey-color: #555;
+  --light-grey-color: #777;
+  --test-color: yellowgreen;
+
+  /* font size */
+  /* 기본 1rem = 16px */
+  --font-large: 1.6rem;
+  --font-medium: 1.4rem;
+  --font-regular: 1.2rem;
+  --font-basic: 1rem;
+  --font-micro: 0.8rem;
+
+  /* Font weight */
+  /* 기본 400 */
+
+  --weight-bold: 700;
+
+  --weight-semi-bold: 600;
+
+  --weight-basic: 400;
+
+  /* letterspacing */
+  /* 기본 0.1rem */
+  --letterspacing-basic: 0.1rem;
+  --letterspacing-test: 2rem;
+
+  /* Size */
+  --size-border-basic-radius: 0.5rem;
+  --size-border-test-radius: 1rem;
+
+  /* animation */
+  --animation_basic-duration: 0.3s;
+  --animation_test-duration: 1s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* COMMON STYLES */
+
+* {
+  margin: 0;
+  padding: 0;
+
+  font-family: 'Preahvihear', sans-serif;
+
+  /* T */
+  list-style-type: none;
+  /* T */
+  text-decoration: none;
+  box-sizing: border-box;
+  outline: none;
+}
+/* T */
+html {
+  /* font-size: 62.5%; */
+}
+
+/* T: center 셀렉터를 따로 만들어서 필요한 부분에 적용함 */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background-color: var(--secondary-color);
+  /* T: CSS 28 */
+  margin: 3.5rem;
+  /* T: 수평,수직, 흐릿함과 확산 , 색상 */
+  box-shadow: 2rem 4rem 2rem red;
+  /*T: CSS 2 : 거슬리는 스크롤바를 없앰 */
+  overflow: hidden;
 }
