--- a/src/index.css
+++ b/src/index.css
@@ -73,9 +73,9 @@ html {
 .container {
   background-color: var(--secondary-color);
   /* T: CSS 28 */
-  margin: 3.5rem;
+  margin: 0.5rem;
   /* T: 수평,수직, 흐릿함과 확산 , 색상 */
-  box-shadow: 2rem 4rem 2rem red;
+  box-shadow: .2rem .4rem .2rem rgb(139, 139, 139);
   /*T: CSS 2 : 거슬리는 스크롤바를 없앰 */
   overflow: hidden;
 }
