--- a/src/components/PopularTours.css
+++ b/src/components/PopularTours.css
@@ -48,12 +48,12 @@
   }
   
   /* js 02 */
-  /* .change > .front-side {
+  .change > .front-side {
     transform: translateZ(-5rem) translateX(3rem);
     box-shadow: 0 2rem 4rem #777;
     opacity: 0.5;
     z-index: 0;
-  } */
+  }
   
   .tour-name {
     font-size: 2.5rem;
@@ -105,12 +105,12 @@
   
   /* js 02 <pupular tours> 버튼누르면 앞뒤 화면전환 */
   
-  /* .change > .back-side {
+  .change > .back-side {
     transform: translateZ(0) translateX(0);
     box-shadow: 0 0.5rem 2rem #aaa;
     opacity: 0.9;
   }
-   */
+  
   .tour-price {
     font-size: 5rem;
     font-weight: 300;
