--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -148,21 +148,47 @@
   /* CSS 40 */
   /*T: top에서 내려오는 속도 (duration) + delay, opacity 적용되는 속도, color delay*/
   .change .nav-link:nth-child(1) {
-    transition: top 1s 0.4s, opacity 0.3s, color 0.3s;
+    transition: top 1s 0.4s, opacity 0.3s, #845EC2 0.3s;
   }
   
   .change .nav-link:nth-child(2) {
-    transition: top 1s 0.6s, opacity 0.3s, color 0.3s;
+    transition: top 1s 0.6s, opacity 0.3s, #4B4453 0.3s;
   }
   
   .change .nav-link:nth-child(3) {
-    transition: top 1s 0.8s, opacity 0.3s, color 0.3s;
+    transition: top 1s 0.8s, opacity 0.3s, #B0A8B9 0.3s;
   }
   
   .change .nav-link:nth-child(4) {
-    transition: top 1s 1s, opacity 0.3s, color 0.3s;
+    transition: top 1s 1s, opacity 0.3s, #C34A36 0.3s;
   }
   
   .change .nav-link:nth-child(5) {
-    transition: top 1s 1.2s, opacity 0.3s, color 0.3s;
+    transition: top 1s 1.2s, opacity 0.3s, #FF8066 0.3s;
+  }
+
+  /* ~~~~ */
+  .nav-link:nth-child(1) {
+    background: #845EC2;
+ 
+  }
+  
+   .nav-link:nth-child(2) {
+    background: #4B4453;
+    
+  }
+  
+   .nav-link:nth-child(3) {
+    background: #B0A8B9;
+    
+  }
+  
+ .nav-link:nth-child(4) {
+    background: #C34A36;
+   
+  }
+  
+ .nav-link:nth-child(5) {
+    background: #FF8066;
+ 
   }
