--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,13 +64,29 @@
     transition: bottom 0.5s, opacity 0.2s;
   }
   
+  /* 👉r24 */
+  .slide-bottom {  
+    animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  }  
+  
+  @keyframes slide-bottom {
+    0% {
+      transform: translateY(-25%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  
+
   /* CSS 38. js 06 */
   /* navbar-icon클릭할때 .change추가 */
   .change .navbar-wrapper {
     /* position..위치,opacity */
-    bottom: 0%;
+ /*    bottom: 0%;
     opacity: 1;
-  
+   */
     /* CSS 40 */
     /* bottom에서 올라오는 속도, opacity 적용되는 속도, 화면표시되기까지 delay */
     transition: bottom 0.5s, opacity 0.2s 0.25s;
